--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -20,4 +20,10 @@
   bottom: 0;
   right: 0;
   z-index: 10;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  user-select: none;
+  transition: visibility 0s 0.6s, opacity 0.6s;
 }
